// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrement a variable (with postfix operator: x--) 1`] = `
Array [
  "source.ts",
  Array [
    Array [
      "",
      "let x = ",
    ],
    Array [
      "constant.numeric.decimal",
      "0",
    ],
    Array [
      "",
      ";
x",
    ],
    Array [
      "keyword.operator.decrement",
      "--",
    ],
    Array [
      "",
      ";
",
    ],
  ],
]
`;

exports[`decrement a variable (with prefix operator: --x) 1`] = `
Array [
  "source.ts",
  Array [
    Array [
      "",
      "let x = ",
    ],
    Array [
      "constant.numeric.decimal",
      "0",
    ],
    Array [
      "",
      ";
",
    ],
    Array [
      "keyword.operator.decrement",
      "--",
    ],
    Array [
      "",
      "x;
",
    ],
  ],
]
`;

exports[`increment a variable (with postfix operator: x++) 1`] = `
Array [
  "source.ts",
  Array [
    Array [
      "",
      "let x = ",
    ],
    Array [
      "constant.numeric.decimal",
      "0",
    ],
    Array [
      "",
      ";
x",
    ],
    Array [
      "keyword.operator.increment",
      "++",
    ],
    Array [
      "",
      ";
",
    ],
  ],
]
`;

exports[`increment a variable (with prefix operator: ++x) 1`] = `
Array [
  "source.ts",
  Array [
    Array [
      "",
      "let x = ",
    ],
    Array [
      "constant.numeric.decimal",
      "0",
    ],
    Array [
      "",
      ";
",
    ],
    Array [
      "keyword.operator.increment",
      "++",
    ],
    Array [
      "",
      "x;
",
    ],
  ],
]
`;
